Fix some of homepage layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,8 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+/* Container with horizontal constraints */
+.container {
+  @apply px-8 md:px-24 max-w-screen-xl mx-auto;
+}
